--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=user-service
+spring.data.mongodb.uri=mongodb://localhost:27017/user_db
+server.port=8082
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.try-it-out-enabled=true
+springdoc.webjars.prefix=/webjars
+jwt.secret=seu-segredo-super-secreto-aqui
+jwt.expiration=86400000
