--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=user-service
-spring.data.mongodb.uri=mongodb://localhost:27017/user_db
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/user_db}
 server.port=8082
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
