--- a/user-service/dockerfile
+++ b/user-service/dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY --from=build /app/target/user-service-1.0.0-SNAPSHOT.jar app.jar
+COPY target/user-service-1.0.0-SNAPSHOT.jar app.jar
 EXPOSE 8082
 ENTRYPOINT ["java", "-jar", "app.jar"]
