--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -3,13 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.petfood</groupId>
-        <artifactId>petfood-app</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.5.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>user-service</artifactId>
-    <name>user-service</name>
-    <description>User Management for PetFood App</description>
+    <artifactId>payment-service</artifactId>
+    <name>payment-service</name>
+    <description>Payment Service for PetFood App</description>
     <properties>
         <java.version>21</java.version>
     </properties>
@@ -33,18 +34,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -55,7 +52,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.3.2</version>
                 <configuration>
-                    <mainClass>com.petfood.userservice.UserServiceApplication</mainClass>
+                    <mainClass>com.petfood.paymentservice.PaymentServiceApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
