--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,71 @@
 version: '3.8'
 services:
   mongodb:
-    image: mongo:6.0
+    image: mongo:latest
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
-  catalog-service:
-    build: ./catalog-service
-    ports:
-      - "8081:8081"
-    depends_on:
-      - mongodb
-    environment:
-      - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/catalog_db
+    networks:
+      - petfood-network
+
   user-service:
-    build: ./user-service
+    build:
+      context: ./user-service
     ports:
       - "8082:8082"
-    depends_on:
-      - mongodb
     environment:
       - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/user_db
+    depends_on:
+      - mongodb
+    networks:
+      - petfood-network
+
+  catalog-service:
+    build:
+      context: ./catalog-service
+    ports:
+      - "8081:8081"
+    environment:
+      - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/catalog_db
+    depends_on:
+      - mongodb
+    networks:
+      - petfood-network
+
+  order-service:
+    build:
+      context: ./order-service
+    ports:
+      - "8083:8083"
+    environment:
+      - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/order_db
+      - CATALOG_SERVICE_URL=http://catalog-service:8081
+      - USER_SERVICE_URL=http://user-service:8082
+    depends_on:
+      - mongodb
+      - user-service
+      - catalog-service
+    networks:
+      - petfood-network
+
+  payment-service:
+    build:
+      context: ./payment-service
+    ports:
+      - "8084:8084"
+    environment:
+      - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/payment_db
+      - ORDER_SERVICE_URL=http://order-service:8083
+    depends_on:
+      - mongodb
+      - order-service
+    networks:
+      - petfood-network
+
+networks:
+  petfood-network:
+    driver: bridge
+
 volumes:
   mongodb_data:
