--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=payment-service
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/payment_db}
+server.port=8084
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+order-service.url=http://localhost:8083
