--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,28 @@
      # Node modules
      node_modules/
-     
+
      # Build output
      build/
      dist/
-     
+
      # Environment variables
      .env
      .env.local
      .env.development.local
      .env.test.local
      .env.production.local
-     
+
      # Logs
      npm-debug.log*
      yarn-debug.log*
      yarn-error.log*
-     
+
      # IntelliJ
      .idea/
      *.iml
-     
+
      # Maven
      target/
-     ```
+
+     # VSCode
+     .vscode/
